test/compilable/objconst1.d

void main()
{
	const(Object)ref copy = new const(Object)ref;
	const(Object) value = new const(Object)ref;
	copy = value;
}