test/fail_compilation/fail2361.d

class C {}

void main()
{
    immutable c = new immutable(C);
    delete c;
}
